software/branches/1.3RC/interfaces/iMesh/spec/iMesh_new.h


#define IMESH_MAJOR_VERSION IMESH_VERSION_MAJOR
#define IMESH_MINOR_VERSION IMESH_VERSION_MINOR
#define IMESH_PATCH_VERSION IMESH_VERSION_PATCH
typedef struct iMesh_Instance_Private* iMesh_Instance;
void iMesh_getDblData(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    double* out_data, 
    int* err  
);
void iMesh_getEHData(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    iBase_EntityHandle* out_data, 
    int* err  
);
void iMesh_setData(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    const void* tag_value, 
    const int tag_value_size, 
    int* err  
);
void iMesh_setIntData(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    const int tag_value, 
    int* err  
);
void iMesh_setDblData(
    iMesh_Instance instance  
    iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    const double tag_value, 
    int* err  
);
void iMesh_setEHData(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    const iBase_EntityHandle tag_value, 
    int* err  
);
void iMesh_getAllTags(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    iBase_TagHandle** tag_handles, 
    int* tag_handles_allocated, 
    int* tag_handles_size, 
    int* err  
);
void iMesh_rmvTag(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    int* err  
);
void iMesh_initEntIter(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int requested_entity_type, 
    const int requested_entity_topology, 
    iBase_EntityIterator* entity_iterator, 
    int* err  
);
void iMesh_getNextEntIter(
    iMesh_Instance instance, 
    iBase_EntityIterator entity_iterator, 
    iBase_EntityHandle* entity_handle, 
    int* has_data, 
    int* err  
);
void iMesh_resetEntIter(
    iMesh_Instance instance, 
    iBase_EntityIterator entity_iterator, 
    int* err  
);
void iMesh_endEntIter(
    iMesh_Instance instance, 
    iBase_EntityIterator entity_iterator, 
    int* err  
);
void iMesh_getEntTopo(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    int* out_topo, 
    int* err  
);
void iMesh_getEntType(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    int* out_type, 
    int* err  
);
void iMesh_getVtxCoord(
    iMesh_Instance instance, 
    const iBase_EntityHandle vertex_handle, 
    double* x, 
    double* y, 
    double* z, 
    int* err  
);
void iMesh_getEntAdj(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    const int entity_type_requested, 
    iBase_EntityHandle** adj_entity_handles, 
    int* adj_entity_handles_allocated, 
    int* adj_entity_handles_size, 
    int* err  
);
void iMesh_getEnt2ndAdj(
     iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    int bridge_entity_type, 
    int requested_entity_type, 
    iBase_EntityHandle** adjacent_entities, 
    int* adjacent_entities_allocated, 
    int* adjacent_entities_size, 
    int* err   
);
void iMesh_subtract(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_1, 
    const iBase_EntitySetHandle entity_set_2, 
    iBase_EntitySetHandle* result_entity_set, 
    int* err  
);
void iMesh_intersect(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_1, 
    const iBase_EntitySetHandle entity_set_2, 
    iBase_EntitySetHandle* result_entity_set, 
    int* err  
);
void iMesh_unite(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_1, 
    const iBase_EntitySetHandle entity_set_2, 
    iBase_EntitySetHandle* result_entity_set, 
    int* err  
);