software/branches/1.3RC/interfaces/iMesh/examples/FindAdjacency/iMesh_iso.F03


     subroutine iMesh_getDblData ( instance, entity_handle, tag_handle, out_data, err ) 
       ! ,bind(C,name="iMesh_getDblData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       real(c_double), intent(out) :: out_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getDblData

     subroutine iMesh_getEHData ( instance, entity_handle, tag_handle, out_data, err ) 
       ! ,bind(C,name="iMesh_getEHData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(out) :: out_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEHData

     subroutine iMesh_setData ( instance, entity_handle, tag_handle, tag_value, tag_value_size, &
          err ) 
       ! ,bind(C,name="iMesh_setData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       character(len=tag_value_size), intent(in) :: tag_value
       integer(c_int), intent(in), value :: tag_value_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setData

     subroutine iMesh_setIntData ( instance, entity_handle, tag_handle, tag_value, err ) 
       ! ,bind(C,name="iMesh_setIntData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(in), value :: tag_value
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setIntData

     subroutine iMesh_setDblData ( instance, entity_handle, tag_handle, tag_value, err ) 
       ! ,bind(C,name="iMesh_setDblData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       real(c_double), intent(in), value :: tag_value
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setDblData

     subroutine iMesh_setEHData ( instance, entity_handle, tag_handle, tag_value, err ) 
       ! ,bind(C,name="iMesh_setEHData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(in), value :: tag_value
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setEHData

     subroutine iMesh_getAllTags ( instance, entity_handle, tag_handles, tag_handles_allocated, tag_handles_size, &
          err ) 
       ! ,bind(C,name="iMesh_getAllTags") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(inout) :: tag_handles
       integer(c_int), intent(inout) :: tag_handles_allocated
       integer(c_int), intent(out) :: tag_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getAllTags

     subroutine iMesh_rmvTag ( instance, entity_handle, tag_handle, err ) 
       ! ,bind(C,name="iMesh_rmvTag") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvTag

     subroutine iMesh_initEntIter ( instance, entity_set_handle, requested_entity_type, requested_entity_topology, &
          entity_iterator, err ) 
       ! ,bind(C,name="iMesh_initEntIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: requested_entity_type
       integer(c_int), intent(in), value :: requested_entity_topology
       type(c_ptr), intent(out) :: entity_iterator
       integer(c_int), intent(out) :: err
     end subroutine iMesh_initEntIter

     subroutine iMesh_getNextEntIter ( instance, entity_iterator, entity_handle, has_data, &
          err ) 
       ! ,bind(C,name="iMesh_getNextEntIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_iterator
       type(c_ptr), intent(out) :: entity_handle
       integer(c_int), intent(out) :: has_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNextEntIter

     subroutine iMesh_resetEntIter ( instance, entity_iterator, err ) 
       ! ,bind(C,name="iMesh_resetEntIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_iterator
       integer(c_int), intent(out) :: err
     end subroutine iMesh_resetEntIter

     subroutine iMesh_endEntIter ( instance, entity_iterator, err ) 
       ! ,bind(C,name="iMesh_endEntIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_iterator
       integer(c_int), intent(out) :: err
     end subroutine iMesh_endEntIter

     subroutine iMesh_getEntTopo ( instance, entity_handle, out_topo, err ) 
       ! ,bind(C,name="iMesh_getEntTopo") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       integer(c_int), intent(out) :: out_topo
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntTopo

     subroutine iMesh_getEntType ( instance, entity_handle, out_type, err ) 
       ! ,bind(C,name="iMesh_getEntType") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       integer(c_int), intent(out) :: out_type
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntType

     subroutine iMesh_getVtxCoord ( instance, vertex_handle, x, y, z, err ) 
       ! ,bind(C,name="iMesh_getVtxCoord") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: vertex_handle
       real(c_double), intent(out) :: x
       real(c_double), intent(out) :: y
       real(c_double), intent(out) :: z
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getVtxCoord

     subroutine iMesh_getEntAdj ( instance, entity_handle, entity_type_requested, adj_entity_handles, adj_entity_handles_allocated,&
          adj_entity_handles_size, err ) 
       ! ,bind(C,name="iMesh_getEntAdj")  
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       integer(c_int), intent(in), value :: entity_type_requested
       type(c_ptr), intent(inout) :: adj_entity_handles
       integer(c_int), intent(inout) :: adj_entity_handles_allocated
       integer(c_int), intent(out) :: adj_entity_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntAdj

     subroutine iMesh_getEnt2ndAdj ( instance, entity_handle, bridge_entity_type, requested_entity_type, adjacent_entities,&
          & adjacent_entities_allocated, adjacent_entities_size, err ) 
       ! ,bind(C,name="iMesh_getEnt2ndAdj")  
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       integer(c_int), intent(in), value :: bridge_entity_type
       integer(c_int), intent(in), value :: requested_entity_type
       type(c_ptr), intent(inout) :: adjacent_entities
       integer(c_int), intent(inout) :: adjacent_entities_allocated
       integer(c_int), intent(out) :: adjacent_entities_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEnt2ndAdj

     subroutine iMesh_subtract ( instance, entity_set_1, entity_set_2, result_entity_set, err ) 
       ! ,bind(C,name="iMesh_subtract")  
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_1
       type(c_ptr), intent(in), value :: entity_set_2
       type(c_ptr), intent(out) :: result_entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_subtract

     subroutine iMesh_intersect ( instance, entity_set_1, entity_set_2, result_entity_set, err ) 
       ! ,bind(C,name="iMesh_intersect") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_1
       type(c_ptr), intent(in), value :: entity_set_2
       type(c_ptr), intent(out) :: result_entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_intersect

     subroutine iMesh_unite ( instance, entity_set_1, entity_set_2, result_entity_set, err ) 
       ! ,bind(C,name="iMesh_unite") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_1
       type(c_ptr), intent(in), value :: entity_set_2
       type(c_ptr), intent(out) :: result_entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_unite
  end interface


  
  !
  ! Parameters (macros) from the C header file
  !
  integer(c_int), parameter :: IMESH_MAJOR_VERSION = 1 
  integer(c_int), parameter :: IMESH_MINOR_VERSION = 0 
  integer(c_int), parameter :: IMESH_PATCH_VERSION = 0 

end module iMesh
